--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -25,7 +25,7 @@
             android:textSize="20dp" />
 
         <EditText
-            android:text="13844945429"
+            android:text="13843030549"
             android:id="@+id/edit_phone_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -216,7 +216,7 @@
 
     <Button
         android:id="@+id/btn_reg"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
@@ -225,18 +225,8 @@
         android:text="注册"
         android:textSize="20dp" />
     <Button
-        android:id="@+id/btn_heart"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:text="心跳"
-        android:textSize="20dp" />
-    <Button
         android:id="@+id/btn_auth"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
@@ -244,6 +234,198 @@
         android:gravity="center"
         android:text="鉴权"
         android:textSize="20dp" />
+    <Button
+        android:id="@+id/btn_heart"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="心跳"
+        android:textSize="20dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="报警标志"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="0"
+                android:id="@+id/edit_sign"
+                android:layout_width="150dp"
+
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="状态"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="2"
+                android:id="@+id/edit_state"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="纬度"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="43"
+                android:id="@+id/edit_lat"
+                android:layout_width="150dp"
+
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="经度"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="128"
+                android:id="@+id/edit_lon"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="海拔"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="0"
+                android:id="@+id/edit_height"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="速度"
+                android:textSize="20dp" />
+            <EditText
+                android:text="0"
+                android:id="@+id/edit_speed"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="方向"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="0"
+                android:id="@+id/edit_direction"
+                android:layout_width="150dp"
+
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="时间"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="2017520121212"
+                android:id="@+id/edit_time"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="附加信息Id"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="1"
+                android:id="@+id/edit_attachId"
+                android:layout_width="150dp"
+
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="附加信息长度"
+                android:textSize="20dp" />
+
+            <EditText
+                android:text="4"
+                android:id="@+id/edit_attachLength"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="附加信息"
+            android:textSize="20dp" />
+
+        <EditText
+            android:text="10"
+            android:id="@+id/edit_attachMsg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_location"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="位置信息汇报"
+        android:textSize="20dp" />
+
 
     <Button
         android:id="@+id/btn_resp"
@@ -274,7 +456,7 @@
         android:layout_marginTop="40dp"
         android:background="@color/colorPrimary"
         android:gravity="center"
-        android:text="查询终端参数(n)"
+        android:text="查询终端参数"
         android:textSize="20dp" />
 </LinearLayout>
 </ScrollView>
